# deepseek-free-api_rs

./: .env  .env.example  Cargo.toml  Dockerfile  README_NEW.md  build.sh  docker-compose.yml  simple_test.sh  start.sh  test_account.sh  test_api.sh  test_login.sh
data/: api_keys.json
rust-version/: Cargo.toml  README.md  test_login.sh
rust-version/src/: error.rs  models.rs
rust-version/src/handlers/: api_keys.rs  chat.rs  health.rs  mod.rs
rust-version/src/services/: api_key_manager.rs  challenge_solver.rs  deepseek_client.rs  message_processor.rs  mod.rs  token_manager.rs
src/: config.rs  main.rs  utils.rs
src/handlers/: api_keys.rs  chat.rs  mod.rs  token.rs
src/services/: api_key_manager.rs  login_service.rs  mod.rs  session_pool.rs
